<resources>
    <string name="app_name">weather</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>

    <string name="todo">TODO</string>
    <string name="temperature_label">Температура</string>
    <string name="feels_like_label">Ощущается как</string>
    <string name="city_coordinates">lt/ln: %s, %s</string>
    <string name="try_one_more_time">to try one more time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cities">Города</string>
    <string name="history">История</string>
    <string name="contacts">Контакты</string>
    <string name="authorities">local.kas.weather.provider.EducationContentProvider</string>
    <string name="map">map</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIza
    </string>
    <string name="_1">Москва, Крассная площадь 1</string>

</resources>