<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_cities"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cities" />

        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/history" />

        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/contacts" />

        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/map" />

    </group>

</menu>