<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_maps">

    <fragment
        android:id="@+id/nav_cities"
        android:name="local.kas.weather.view.cities.CitiesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_cities" />

    <fragment
        android:id="@+id/nav_weather"
        android:name="local.kas.weather.view.weather.WeatherFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/nav_history"
        android:name="local.kas.weather.view.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="local.kas.weather.view.contacts.ContactsFragment"
        android:label="Контакты"
        tools:layout="@layout/contacts_fragment" />

    <fragment
        android:id="@+id/nav_maps"
        android:name="local.kas.weather.view.map.MapsFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_maps" />


</navigation>